--- a/UI/chatWindow.css
+++ b/UI/chatWindow.css
@@ -287,7 +287,7 @@ ul.chat-container li.fromOtherUsers .messageBubble{
     border-radius: 12px;
     border-bottom-left-radius: 2px;
     padding: 12px 15px;
-    max-width: 70%;
+    max-width: 350px;
     font-size: 16px;
     -webkit-animation: message-left ease-in-out 2s forwards;
     -moz-animation: message-left ease-in-out 2s forwards;
