--- a/UI/chatWindow.css
+++ b/UI/chatWindow.css
@@ -288,6 +288,7 @@ ul.chat-container li.fromOtherUsers .messageBubble{
     border-bottom-left-radius: 2px;
     padding: 12px 15px;
     max-width: 350px;
+    width:300px;
     font-size: 16px;
     -webkit-animation: message-left ease-in-out 2s forwards;
     -moz-animation: message-left ease-in-out 2s forwards;
